fix: spinbox too wide

--- a/shared.css
+++ b/shared.css
@@ -286,6 +286,7 @@ section{
     flex-direction: row;
     gap: 0.25em;
     align-items: center;
+    width: max-content;
     border-radius: 0.5em;
     padding: 0.3em;
     background-color: var(--secondary-color-light);
